# selfCheckout

./: .gitignore  CMakeLists.txt  README.md
.github/: copilot-instructions.md
include/: AwaitingPaymentState.h  BGPricingRule.h  BasePricingRule.h  CashPayment.h  CompletedState.h  CriticalState.h  DiscountPricingRule.h  Ledger.h  MockScale.h  Override.h  OverrideState.h  PaymentProcessingState.h  PaymentStrategy.h  PricingEngine.h  PricingRule.h  PricingRulesBehavior.h  PricingTypes.h  ProductRecord.h  Scale.h  ScanningState.h  TaxRule.h  Transaction.h  TransactionItem.h  TransactionState.h  inventoryRecord.h  ledger.h  override.h  payment.h  productRecord.h  scale.h  systemState.h  transaction.h  transactionItem.h
src/: AwaitingPaymentState.cpp  BGPricingRule.cpp  BasePricingRule.cpp  CashPayment.cpp  CompletedState.cpp  CriticalState.cpp  DiscountPricingRule.cpp  InventoryRecord.cpp  Ledger.cpp  MockScale.cpp  Override.cpp  OverrideState.cpp  PaymentProcessingState.cpp  PaymentStrategy.cpp  PricingEngine.cpp  PricingRule.cpp  PricingRulesBehavior.cpp  ProductRecord.cpp  Scale.cpp  ScanningState.cpp  TaxRule.cpp  Transaction.cpp  TransactionItem.cpp  inventoryRecord.cpp  ledger.cpp  main.cpp  override.cpp  payment.cpp  productRecord.cpp  systemState.cpp  transaction.cpp  transactionItem.cpp
